# Ranbow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.actix  Dockerfile.yew  README.md  Ranbow.sln  Trunk.toml.sample  docker-compose.yml.sample  httpd.conf.sample
.github/workflows/: docker-image.yml
Ranbow/: Dockerfile  Program.cs  Ranbow.csproj  Startup.cs  settings.env.template
Ranbow/Controllers/: HomeController.cs  RanbowmizerController.cs
Ranbow/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
Ranbow/Properties/: launchSettings.json
Ranbow/ViewModels/: ErrorViewModel.cs
Ranbow/Views/: _ViewImports.cshtml
RanbowBack/Config/: Configuration.cs
RanbowBack/DbObjects/: DbGadget.cs  DbOperator.cs  DbWeapon.cs
RanbowBack/Enums/: Enums.cs
RanbowBack/Models/: GadgetModel.cs  OperatorModel.cs  WeaponModel.cs
RanbowBack/Repositories/: GadgetRepository.cs  OperatorRepository.cs  WeaponRepository.cs
Ranbowmizer/: Ranbowmizer.csproj
Ranbowmizer/Operations/: Randomize.cs
Ranbowmizer/Operators/: Randomize.cs
db-api/: Cargo.toml
db-api/src/: main.rs
ranbow/: gadgets.json  operators.json  version.json
shared/: Cargo.toml
web-app/: Cargo.toml  Trunk.toml  index.html
web-app/src/: environment.rs  main.rs
web-app/src/components/: default.rs  full_game.rs  full_op_display.rs  login.rs  mod.rs  operators.rs  selector.rs  tdm.rs  team.rs
web-app/src/logic/: helpers.rs  mod.rs  randomizer.rs
web-app/src/style/: collapsable.css  footer.css  misc.css  op_display.css  operators.css  selector.css
(+19 files in other folders)
