[package]
name = "db-api"
version = "0.1.0"
edition = "2021"
workspace = "../"

[dependencies]
actix-web = "^4"
actix-files = "^0.6"
actix-web-lab = "^0.19"
env_logger = "^0.10"
serde = { version = "^1", features = ["derive"] }
log = "^0.4"
derive_more = "^0.99"
shared = { path = "../shared" }
mongodb = "^2.8"
futures = "^0.3"
fuzzy-matcher = "*"
reqwest = { version = "^0.11", features = ["json"] }