[package]
name = "web-app"
version = "0.1.0"
edition = "2021"
workspace = "../"

[dependencies]
yew = { version = "^0.21", features = ["csr"] }
yew-router = "^0.18"
yew-hooks = "^0.3"
reqwasm = "^0.5"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
log = "^0.4"
wasm-logger = "^0.2"
shared = { path = "../shared" }
gloo-utils ="^0.2"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
web-sys = { version = "^0.3", features = ["HtmlInputElement"]}